--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -1,12 +1,4 @@
 
-.card {
-  background-color: $color-light;
-  padding-left: 20px;
-  padding-top: 30px;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px 0px $color-midtone;
-}
-
 .wrapper-grid {
   display: grid;
   grid-template-rows: auto;
@@ -25,4 +17,19 @@
   @media (min-width: 1650px) {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   }
+}
+
+.card {
+  background-color: $color-light;
+  padding-left: 20px;
+  padding-top: 30px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px 0px $color-midtone;
+  height: 300px;
+}
+
+
+.container-data-card {
+  height: 195px;
+  overflow: auto;
 }
